# RaulTest

./: CMakeLists.txt  initialize_database.sql
cmake/Modules/: FindMySQL++.cmake  FindMySQLclient.cmake
src/: main.cpp
src/backend/: bw_pixel.hpp  file_data.cpp  image.hpp  main_open_cl_program.cpp  main_open_cl_program.hpp  open_cl_base.cpp  open_cl_base.hpp  open_cl_buffer.cpp  open_cl_buffer.hpp  open_cl_context.cpp  open_cl_context.hpp  open_cl_exceptions.cpp  open_cl_exceptions.hpp  open_cl_kernel.cpp  open_cl_kernel.hpp  rgb_pixel.cpp  types.hpp
src/backend/db/: database_connection.cpp  database_connection.hpp  image_repository.cpp  image_repository.hpp  mysql_connection_info.hpp  mysql_connection_pool.cpp  mysql_connection_pool.hpp
src/backend/db_conversion/: image_converter.cpp  image_converter.hpp
src/backend/db_model/: image.cpp  image.hpp  image_view.cpp  image_view.hpp
src/backend/dto/: image_dto.cpp  image_dto.hpp  register_dto.cpp  register_dto.hpp  user_details.cpp  user_details.hpp  user_dto.cpp  user_dto.hpp
src/backend/exceptions/: backend_exception.cpp  database_exceptions.cpp  database_exceptions.hpp  http_client_exception.cpp  http_client_exception.hpp  open_cl_exceptions.hpp  service_exceptions.cpp  service_exceptions.hpp
src/backend/http_client/: authorization_request.cpp  authorization_request.hpp  http_client_builder.cpp  http_client_builder.hpp  http_multi_part_builder.hpp  json_document_converter.hpp
src/backend/model/: bw_pixel.cpp  database_image.cpp  database_image.hpp  file_data.hpp  image.hpp  image_info.cpp  image_info.hpp  image_types.cpp  image_types.hpp  image_view.cpp  image_view.hpp  token.cpp  token.hpp
src/backend/opencl/: main_open_cl_program.cpp  main_open_cl_program.hpp  open_cl_buffer.hpp  open_cl_context.cpp  open_cl_context.hpp  open_cl_kernel.cpp  open_cl_kernel.hpp  pixel.cl
src/backend/opencl_src/: pixel.cl
src/backend/service/: image_service.cpp  image_service.hpp
src/controller/: admin_main_window_controller.cpp  admin_main_window_controller.hpp  load_from_database_dialog_controller.cpp  load_from_database_dialog_controller.hpp  login_controller.cpp  login_controller.hpp  main_window_controller.cpp  main_window_controller.hpp  register_controller.cpp  register_controller.hpp  save_in_database_dialog_controller.cpp  sensibility_dialog_controller.cpp  sensibility_dialog_controller.hpp  wait_dialog_controller.cpp  wait_dialog_controller.hpp  zoom_graphics_view.cpp  zoom_graphics_view.hpp
src/dto/: image_dto.cpp  image_dto.hpp  owner_dto.cpp  owner_dto.hpp  register_dto.cpp  register_dto.hpp  user_details.cpp  user_details.hpp
src/exceptions/: backend_exception.hpp  http_client_exception.cpp  open_cl_exceptions.cpp
src/http_client/: authorization_request.hpp  http_client_builder.cpp  http_client_builder.hpp  http_multi_part_builder.cpp  http_multi_part_builder.hpp  http_request_type.hpp  json_document_converter.hpp
src/model/: file_data.cpp  image.hpp  image_cache.cpp  image_cache.hpp  image_history.cpp  image_history.hpp  image_types.cpp  matrix_transformation_type.cpp  matrix_transformation_type.hpp  rgb_pixel.hpp  token.hpp
src/opencl/: main_open_cl_program.cpp  main_open_cl_program.hpp  open_cl_buffer.cpp  open_cl_buffer.hpp  open_cl_context.cpp  open_cl_context.hpp  open_cl_event.cpp  open_cl_event.hpp  open_cl_kernel.cpp  open_cl_kernel.hpp
src/opencl_src/: binarization.cl  canny.cl  conversion.cl  dilation.cl  erosion.cl  gaussian.cl  high_pass.cl  histogram.cl  inversion.cl  low_pass.cl  matrix.cl  minimum.cl  pseudocoloration.cl
src/test/: main.cpp
src/transformation/: add_rgb_channels.cpp  add_rgb_channels.hpp  bidirectional_matrix_transformation.cpp  bidirectional_matrix_transformation.hpp  binarization.cpp  binarization.hpp  canny.cpp  canny.hpp  closing.cpp  closing.hpp  color_inversion.cpp  color_inversion.hpp  contour_detection.cpp  contour_detection.hpp  dilation.cpp  dilation.hpp  erosion.cpp  erosion.hpp  gaussian_blur.cpp  gaussian_blur.hpp  grayscale.cpp  grayscale.hpp  high_pass.cpp  high_pass.hpp  histogram_equalization.cpp  histogram_equalization.hpp  low_pass.cpp  low_pass.hpp  matrix_transformation.cpp  matrix_transformation.hpp  opening.cpp  opening.hpp  otsu_thresholding.cpp  otsu_thresholding.hpp  pseudocoloration.cpp  pseudocoloration.hpp  watershed.cpp  watershed.hpp
src/ui/: load_database_dialog.ui  main.cpp  main.ui  register_form.ui  save_database_dialog.ui  sensibility_dialog.ui  wait_dialog.ui
src/ui/controller/: admin_main_window_controller.cpp  (+17 more)
(+13 files in other folders)
